fix: input button styles on mobile (part 2) (#244)
* Namespace all header styles under header CSS rule

* Move generic gap styling to HTML

* Move Header specific ghost-button styles into Header CSS rules

* Make all header buttons of consistent height

* Remove unused styles

* Simplify Keplr logo style: base on height for consistent button height

* Use standard transition animation timing

* Remove unused style imports

* Horizontally center header shadow

* Override containerization of Header for now:

    - should containerize all pages better layout (excluding 100% width banners)
    - Header was not covering page width on very wide screens

* Remove unused ghost-button styles

* Make connect-wallet button color consistent with primary buttons

* Remove unneeded margin styles on buttons inside columns with margins

* Close the link menu if click was detected outside the Header

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,10 +1,3 @@
-@use '../../styles/mixins-vars/animations.scss' as animations;
-@use '../../styles/mixins-vars/paddings.scss' as paddings;
-@use '../../styles/mixins-vars/margins.scss' as margins;
-@use '../../styles/components/buttons.scss' as buttons;
-@use '../../styles/font/size.scss' as font-size;
-@use 'sass:math';
-
 header,
 .header {
   width: 100%;
@@ -16,24 +9,18 @@ header,
     right: 0;
     z-index: 3;
     background: fixed var(--bg);
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0);
     transition: box-shadow 0.25s;
+    // override containerization for now
+    margin: 0;
+    max-width: 100%;
   }
 
   &.scrolled > .container {
-    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
-  }
-}
-
-nav,
-.nav {
-  &.row,
-  .row {
-    gap: margins.size(4);
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
   }
 
   // set single row height without overflow
-  &.row,
   .row {
     height: 48px;
     flex-flow: nowrap;
@@ -58,6 +45,14 @@ nav,
     }
   }
 
+  button,
+  .button {
+    line-height: 1em;
+    padding: 0.7rem 1rem;
+    border-radius: 0.7rem;
+    border: 1px solid transparent;
+  }
+
   button.user-profile {
     width: 100%;
     max-width: 10em;
@@ -67,27 +62,18 @@ nav,
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    align-self: center;
     padding: 0.5rem 1rem;
-    margin-left: auto;
     border: 1px solid #4eb1e8;
 
     img {
-      width: 1.25rem;
-      height: auto;
-      max-height: 1.25rem;
+      width: auto;
+      height: 1.25rem;
       margin-bottom: 0.15rem;
     }
   }
 
   button.connect-wallet {
     border-radius: 0.4rem;
-    background-color: hsl(200, 77%, 60%);
-
-    &:hover,
-    :active {
-      background-color: hsl(200, 77%, 70%);
-    }
   }
 
   .text-truncate {
